// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilterLink should match enzyme shallow snapshot 1`] = `
<Link
  active={false}
  onClick={[Function]}
  store={
    Object {
      "dispatch": [MockFunction],
      "getState": [MockFunction] {
        "calls": Array [
          Array [],
          Array [],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": Object {
              "visibilityFilter": "abcd",
            },
          },
          Object {
            "isThrow": false,
            "value": Object {
              "visibilityFilter": "abcd",
            },
          },
        ],
      },
      "subscribe": [MockFunction] {
        "calls": Array [
          Array [
            [Function],
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      },
    }
  }
  storeSubscription={
    Subscription {
      "listeners": Object {
        "clear": [Function],
        "get": [Function],
        "notify": [Function],
        "subscribe": [Function],
      },
      "onStateChange": [Function],
      "parentSub": undefined,
      "store": Object {
        "dispatch": [MockFunction],
        "getState": [MockFunction] {
          "calls": Array [
            Array [],
            Array [],
          ],
          "results": Array [
            Object {
              "isThrow": false,
              "value": Object {
                "visibilityFilter": "abcd",
              },
            },
            Object {
              "isThrow": false,
              "value": Object {
                "visibilityFilter": "abcd",
              },
            },
          ],
        },
        "subscribe": [MockFunction] {
          "calls": Array [
            Array [
              [Function],
            ],
          ],
          "results": Array [
            Object {
              "isThrow": false,
              "value": undefined,
            },
          ],
        },
      },
      "unsubscribe": undefined,
    }
  }
>
  Test
</Link>
`;

exports[`FilterLink should match enzyme shallow snapshot 2`] = `
<Link
  active={true}
  filter="abcd"
  onClick={[Function]}
  store={
    Object {
      "dispatch": [MockFunction],
      "getState": [MockFunction] {
        "calls": Array [
          Array [],
          Array [],
          Array [],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": Object {
              "visibilityFilter": "abcd",
            },
          },
          Object {
            "isThrow": false,
            "value": Object {
              "visibilityFilter": "abcd",
            },
          },
          Object {
            "isThrow": false,
            "value": Object {
              "visibilityFilter": "abcd",
            },
          },
        ],
      },
      "subscribe": [MockFunction] {
        "calls": Array [
          Array [
            [Function],
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      },
    }
  }
  storeSubscription={
    Subscription {
      "listeners": Object {
        "clear": [Function],
        "get": [Function],
        "notify": [Function],
        "subscribe": [Function],
      },
      "onStateChange": [Function],
      "parentSub": undefined,
      "store": Object {
        "dispatch": [MockFunction],
        "getState": [MockFunction] {
          "calls": Array [
            Array [],
            Array [],
            Array [],
          ],
          "results": Array [
            Object {
              "isThrow": false,
              "value": Object {
                "visibilityFilter": "abcd",
              },
            },
            Object {
              "isThrow": false,
              "value": Object {
                "visibilityFilter": "abcd",
              },
            },
            Object {
              "isThrow": false,
              "value": Object {
                "visibilityFilter": "abcd",
              },
            },
          ],
        },
        "subscribe": [MockFunction] {
          "calls": Array [
            Array [
              [Function],
            ],
          ],
          "results": Array [
            Object {
              "isThrow": false,
              "value": undefined,
            },
          ],
        },
      },
      "unsubscribe": undefined,
    }
  }
>
  Test
</Link>
`;
